Добавлено API для отправки уведомлений через МС Dossier
